# problems

./: main.ipynb  prompts.py  pyproject.toml  requirements.txt  sub_agents.py  tools.py
Job-Data-Scientist/: basic-rag.py  langchain-pipeline.py  llm_based_market_analysis.py  sample.txt
Job-Data-Scientist/ML Top Concepts/: Optuna-demo.ipynb  standardization.ipynb  supervised-vs-unsupervised-learning.ipynb
Job-Data-Scientist/NLTK/: text-preprocessing.ipynb
Job-Data-Scientist/Python-Advanced/: generators-demo.ipynb  matplotlib-seaborn.ipynb  numpy_.ipynb  pandas_.ipynb
Job-Data-Scientist/chatbot/: langgraph_backend.py  streamlit_frontend.py  streamlit_frontend_streaming.py  streamlit_frontend_threading.py
Job-Data-Scientist/langgraph_101/: 0_test_installation.ipynb  10_persistance.ipynb  11_tools.ipynb  12_rag.ipynb  1_bmi_workflow.ipynb  2_simple_llm_workflow.ipynb  3_prompt_chaining.ipynb  4_batsman_workflow.ipynb  5_llm_essay_workflow.ipynb  6_quadratic_equation_workflow.ipynb  7_review_reply_workflow.ipynb  8_x_post_generator.ipynb  9_basic_chatbot.ipynb
database/: main.ipynb
database/research/: main.py
docling_/research/: main.ipynb
dsa/recursion/: question1.py  questions1.ipynb  questions2.ipynb
fine-tuning-llm/quantization/: Notes.md
git_use_cases/: sync_all.py
lang-graph/: .env  0_text_installation.ipynb  1_bmi_workflow.ipynb  1_simple_llm_call.py  2_bmi_workflow_updated.ipynb  2_sequential_chain.py  3_rag_v1.py  3_simple_llm_workflow.ipynb  4_prompt_chaining.ipynb  4_rag_v2.py  5_prompt_chaining_updated.ipynb  6_batsman_workflow.ipynb  7_UPSC_essays_workflow.ipynb  8_workflows.ipynb  9_tools.ipynb
langchain-mcp-demo/: client.py  math_server.py  weather_server.py
leet-code/: q1.py  q2.py  q3.py  q4.py  q5.py  q6.py  q7.py  q8.py
loaders_crawl4ai/: part_1.py
loaders_crawl4ai/basics/: main1.py  main2.py  main3.py
loaders_crawl4ai/basics/results/: cleaned_html.html  normal_html.html  raw_markdown.md
mcp_test/: async_func.py  async_func_2.py  math.py
previous intreview questions/: 0_test_case.ipynb  1_test_case.ipynb
previous intreview questions/Interview_Questions/: q1.py  q2.py
previous intreview questions/random-realizations/: main.ipynb
rag/: rag_from_scratch.ipynb
research/_exceptions/: complete_order.py  complex_try.py  custom_exception.py  multiple_exceptions.py
research/_filehandling/: file_handling.py  order.txt
research/_threading_concurrency/: 01_threading.py  02_multiprocessing.py  03_gil_threading.py  04_gil_multiprocessing.py  07_thread_download.py  08_thread_lock.py  09_process_one.py  10_process_two.py
research/multithreading/: multithreading_.py  test.py
research/my_list/: demo_list.py  main.md
research/oops/: created_complex_number.py  test.py
research/rud_test_case/: report_scope_cleaner.py  steps.md
research/rud_test_case/jsons/: cleaned_report_scope.json  report_scope.json
streamlit/: main1.py  main2.py  main3.py
